added model final

--- a/disaster_tweets.ipynb
+++ b/disaster_tweets.ipynb
@@ -1890,8 +1890,17 @@
     "\n",
     "history = model_final.fit(train_batch, \n",
     "                    epochs=4, \n",
-    "                    validation_data=val_batch)\n",
-    "              "
+    "                    validation_data=val_batch)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "id": "fa9913ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_final.save(\"model_final.h5\")"
    ]
   },
   {
